@@ -15,6 +15,7 @@
 10. Add support for Haiku - thanks to miqlas
 11. Remember last loaded/saved playlist name - and use this as the default
     name when saving.
+12. Fix MPRIS length field.
 
 2.2.0
 -----
